methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:11: error: value update is not a member of Boolean
while (isOverBaggle()==false) { if (isFacingTrail()=true) {
                                    ^